javali_tests/HW1/ReadWrite.javali.err
Debug information for file: javali_tests\HW1\ReadWrite.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: r1, type: int)
| | | VarDecl (name: r2, type: int)
| | | VarDecl (name: i0, type: int)
| | | VarDecl (name: i1, type: int)
| | | VarDecl (name: i2, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: i0)
| | | | IntConst (value: 5)
| | | Assign ()
| | | | Var (name: i1)
| | | | IntConst (value: 4)
| | | Assign ()
| | | | Var (name: i1)
| | | | BinaryOp (operator: B_DIV)
| | | | | Var (name: i1)
| | | | | BinaryOp (operator: B_PLUS)
| | | | | | Var (name: i1)
| | | | | | IntConst (value: 4)

Phase exec failed because we expected to see:

But we actually saw:
Error: 34816

The difference is:
At line   1 /   1:
< 
> Error: 34816

